add extra parameters to vim-lsp example
Signed-off-by: Eduard Ganiukov <eduard.ganiukov@swisscom.com>